Use List.of / Map.of / Set.of