@@ -144,7 +144,7 @@ public class DefaultProject implements Project {
         if (dependencyManagement != null) {
             return new MappedList<>(dependencyManagement.getDependencies(), this::toDependency);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
