@@ -24,7 +24,6 @@ import java.io.File;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -124,13 +123,13 @@ class TestApi {
         DefaultSession session = new DefaultSession(
                 ms,
                 repositorySystem,
-                Collections.emptyList(),
+                List.of(),
                 mavenRepositorySystem,
                 new DefaultLookup(plexusContainer),
                 runtimeInformation);
         org.apache.maven.api.RemoteRepository remoteRepository = session.getRemoteRepository(
                 new RemoteRepository.Builder("mirror", "default", "file:target/test-classes/repo").build());
-        this.session = session.withRemoteRepositories(Collections.singletonList(remoteRepository));
+        this.session = session.withRemoteRepositories(List.of(remoteRepository));
         InternalSession.associate(rss, this.session);
         sessionScope.enter();
         sessionScope.seed(InternalMavenSession.class, InternalMavenSession.from(this.session));
