@@ -20,9 +20,9 @@ package org.apache.maven.impl.resolver;
 
 import java.time.Instant;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.apache.maven.api.Constants;
@@ -78,7 +78,7 @@ class VersionsMetadataGenerator implements MetadataGenerator {
 
     @Override
     public Collection<? extends Metadata> prepare(Collection<? extends Artifact> artifacts) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
